# sonare-codec

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  NOTICE  README.md  RELEASE.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bindings/python/: Cargo.toml  LICENSE-THIRDPARTY  NOTICE  README.md  pyproject.toml  sonare_codec.pyi
bindings/python/src/: aac_diagnostics.rs  aac_encode.rs  aac_tables.rs  decode.rs  encode_basic.rs  lib.rs  module.rs  mp3_diagnostics.rs  types.rs  util.rs
bindings/wasm/: .npmignore  Cargo.toml  NOTICE  README.md  index.d.ts  index.js  package.json
bindings/wasm/src/: aac_diagnostics.rs  aac_tables.rs  decode.rs  encode_aac.rs  encode_basic.rs  lib.rs  mp3_diagnostics.rs  tests.rs  types.rs  util.rs
bindings/wasm/src/tests/: cases_01.rs  cases_02.rs
crates/sc-aac/: Cargo.toml  README.md
crates/sc-aac/src/: adts.rs  auto_step.rs  config.rs  frame_encode.rs  lib.rs  pack_sections.rs  raw_blocks.rs  section_plan.rs  spectral_types.rs  step_select_mono.rs  step_select_stereo.rs  stream_encode_mono.rs  tables_api.rs  tables_pairs.rs  tables_quads.rs  tests.rs  util.rs
crates/sc-aac/src/frame_encode/: frame_blocks.rs  stream_mono.rs
crates/sc-aac/src/pack_sections/: codewords.rs  payloads.rs  section_data.rs
crates/sc-aac/src/section_plan/: codebook_planning.rs  payload_wrappers.rs  scale_factors.rs
crates/sc-aac/src/step_select_stereo/: evaluation.rs  public_selectors.rs
crates/sc-aac/src/stream_encode_mono/: offset_streams.rs  stereo_streams.rs
crates/sc-aac/src/tests/: cases_01.rs  cases_02.rs  cases_03.rs  cases_04.rs  cases_05.rs  cases_06.rs
crates/sc-core/: Cargo.toml  README.md
crates/sc-core/src/: lib.rs
crates/sc-decode/: Cargo.toml  README.md
crates/sc-decode/src/: lib.rs
crates/sc-flac/: Cargo.toml  README.md
crates/sc-flac/src/: bitwriter.rs  decode.rs  encode.rs  frame_header.rs  lib.rs  metadata.rs  tests.rs  types.rs
crates/sc-mp3/: Cargo.toml  README.md
crates/sc-mp3/src/: analysis_quant.rs  api.rs  bitstream.rs  filterbank.rs  frame_assembly.rs  frame_select.rs  header.rs  huffman_pack.rs  huffman_tables_high.rs  huffman_tables_low.rs  huffman_tables_mid.rs  huffman_types.rs  lib.rs  perceptual_pack.rs  psychoacoustic.rs  reservoir.rs  scalefactor.rs  short_encode.rs  tests.rs
crates/sc-mp3/src/huffman_pack/: big_values.rs  regions.rs  scale_factors.rs  short_blocks.rs
crates/sc-mp3/src/psychoacoustic/: fft.rs  masking.rs  scalefactors.rs  stereo.rs  tests.rs
crates/sc-mp3/src/tests/: cases_01.rs  cases_02.rs  cases_03.rs  cases_04.rs  cases_05.rs  cases_06.rs  cases_07.rs
crates/sc-mp4/: Cargo.toml  README.md
crates/sc-mp4/src/: lib.rs
crates/sc-opus/: Cargo.toml  LICENSE-THIRDPARTY  NOTICE  README.md
crates/sc-opus/src/: allocation.rs  analysis.rs  band_split.rs  bands.rs  celt_frame.rs  celt_frontend.rs  cwrs.rs  encoder.rs  laplace.rs  lib.rs  mdct.rs  mode.rs  opus_packet.rs  pitch.rs  preemph.rs  quant_all_bands.rs  quant_band.rs  quant_bands.rs  range_coder.rs  rate.rs  resample.rs  tf.rs  theta.rs  vbr.rs  vq.rs
crates/sc-opus/src/pitch/: comb.rs  postfilter.rs  prefilter.rs  search.rs  tests.rs
crates/sc-vorbis/: Cargo.toml  LICENSE-THIRDPARTY  NOTICE  README.md
crates/sc-vorbis/src/: analysis.rs  block.rs  block_codec.rs  codebook.rs  encoder.rs  floor1.rs  floor_render.rs  header.rs  lib.rs  lpc.rs  masking.rs  mdct.rs  noise.rs  octave.rs  ogg_mux.rs  oggpack.rs  psy.rs  residue.rs  seed.rs  setup.rs  stream.rs  tonecurve.rs  tonemask.rs  window.rs
crates/sc-vorbis/src/encoder/: api.rs  config.rs  encode_impl.rs  residue_books.rs  schedule.rs  tests.rs
crates/sc-vorbis/src/floor1/: encode.rs  fit.rs  render.rs  tests.rs
crates/sc-vorbis/tests/: compression.rs  robustness.rs
crates/sc-wav/: Cargo.toml  README.md
crates/sc-wav/src/: lib.rs
crates/sc-wav/tests/: regression.rs
crates/sonare-codec/: Cargo.toml  NOTICE  README.md
crates/sonare-codec/src/: aac_breakdown.rs  aac_profiles.rs  bindings_support.rs  codec.rs  containers.rs  encode.rs  lib.rs  low_level.rs  tests.rs
crates/sonare-codec/src/tests/: cases_01.rs  cases_02.rs  cases_03.rs
crates/sonare-codec/tests/: aac_roundtrip.rs  mp3_roundtrip.rs
fuzz/: Cargo.toml
fuzz/corpus/aac_decode/: silent-aac-lc-adts.hex
fuzz/corpus/flac_decode/: minimal-constant-frame.hex  minimal-fixed-frame.hex  minimal-left-side-frame.hex  minimal-lpc-frame.hex
fuzz/corpus/mp3_header/: mpeg1-layer3-128k-44100.hex
fuzz/corpus/opus_decode/: minimal-opus-signature.hex
fuzz/corpus/vorbis_decode/: minimal-ogv-signature.hex
fuzz/corpus/wav_decode/: minimal-wav.hex
fuzz/fuzz_targets/: aac_decode.rs  flac_decode.rs  m4a_demux.rs  mp3_header.rs  opus_decode.rs  vorbis_decode.rs  wav_decode.rs
tests/fixtures/: wav-pcm16-stereo.hex
tests/refs/oracle-smoke/: aac-non-silent-scaffold.aac  aac-silent.aac  aac-silent.m4a  flac-non-silent.flac  manifest.json
xtask/: Cargo.toml
xtask/src/: checks.rs  commands.rs  diagnostics_aac_balance.rs  diagnostics_aac_quality.rs  diagnostics_aac_surface.rs  diagnostics_mp3.rs  main.rs  npm_pack.rs  oracle.rs  package_outputs.rs  publish.rs  qa.rs  util.rs
xtask/src/diagnostics_aac_balance/: offsets.rs  surface.rs
xtask/src/tests/: cases_01.rs  cases_02.rs  cases_03.rs  cases_04.rs  cases_05.rs  cases_06.rs
