[package]
name = "sonare-codec-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sc-mp3 = { path = "../crates/sc-mp3" }
sonare-codec = { path = "../crates/sonare-codec", features = ["aac", "wav", "vorbis", "opus"] }

[[bin]]
name = "wav_decode"
path = "fuzz_targets/wav_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flac_decode"
path = "fuzz_targets/flac_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aac_decode"
path = "fuzz_targets/aac_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vorbis_decode"
path = "fuzz_targets/vorbis_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "opus_decode"
path = "fuzz_targets/opus_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "m4a_demux"
path = "fuzz_targets/m4a_demux.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mp3_header"
path = "fuzz_targets/mp3_header.rs"
test = false
doc = false
bench = false
