[package]
name = "sonare-codec-wasm"
version = "0.1.0"
description = "WebAssembly bindings for sonare-codec"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
sonare-codec = { workspace = true }
wasm-bindgen.workspace = true

# Per-codec gates so a bundle can drop the heavy lossy encoders it does not need.
# The default keeps every codec (decode/wav/flac/mp3 come from sonare-codec's own
# defaults); build with `--no-default-features --features <subset>` for a smaller
# wasm artifact.
[features]
default = ["aac", "opus", "vorbis"]
aac = ["sonare-codec/aac"]
opus = ["sonare-codec/opus"]
vorbis = ["sonare-codec/vorbis"]
