[package]
name = "sc-wav"
version = "0.1.0"
description = "WAV codec implementation for sonare-codec"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = ["Cargo.toml", "LICENSE", "NOTICE", "README.md", "src/**", "tests/**"]

[dependencies]
sc-core.workspace = true
